--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -31,9 +31,8 @@
         ?>
         <div class="container">
             <?= $this->content ?>
-            <hr>
             <footer>
-                <p>&copy; 2005 - <?= date('Y') ?> by Zend Technologies Ltd. All rights reserved.</p>
+                <p>&copy; 2005 - <?= date('Y') ?> Шины и диски</p>
             </footer>
         </div>
         <?= $this->inlineScript() ?>
