--- a/module/Car/view/car/rim/search-by-params.phtml
+++ b/module/Car/view/car/rim/search-by-params.phtml
@@ -1,1 +1,16 @@
-<h1>search rims by params</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <form method="post">
+                    <?php echo $this->partial('/car/modification/_select.phtml', [
+                        'brands' => $brands
+                    ]) ?>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default">Search</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
