--- a/module/Car/view/car/modification/_select.phtml
+++ b/module/Car/view/car/modification/_select.phtml
@@ -4,18 +4,15 @@
             <label>Марка</label>
             <select class="form-control select2">
                 <option value="0">Выберите марку</option>
-                <option value="1">Audi</option>
-                <option value="2">BMW</option>
-                <option value="3">Mercedes</option>
+                <?php foreach ($brands as $brand) { ?>
+                    <option value="<?= $brand->getId() ?>"><?= $brand->getName() ?></option>
+                <?php } ?>
             </select>
         </div>
         <div class="form-group">
             <label>Поколение</label>
             <select class="form-control select2">
-                <option value="0">Выберите марку</option>
-                <option value="1">Audi</option>
-                <option value="2">BMW</option>
-                <option value="3">Mercedes</option>
+                <option value="0">Выберите поколение</option>
             </select>
         </div>
     </div>
@@ -23,19 +20,13 @@
         <div class="form-group">
             <label>Модель</label>
             <select class="form-control select2">
-                <option value="0">Выберите марку</option>
-                <option value="1">Audi</option>
-                <option value="2">BMW</option>
-                <option value="3">Mercedes</option>
+                <option value="0">Выберите модель</option>
             </select>
         </div>
         <div class="form-group">
             <label>Модификация</label>
             <select class="form-control select2">
-                <option value="0">Выберите марку</option>
-                <option value="1">Audi</option>
-                <option value="2">BMW</option>
-                <option value="3">Mercedes</option>
+                <option value="0">Выберите модификацию</option>
             </select>
         </div>
     </div>
